Addition: fix the nav bar issue of not showing on articles and contact

--- a/project-02-basic-html-website/styles.css
+++ b/project-02-basic-html-website/styles.css
@@ -198,7 +198,7 @@ body {
         border-radius: 25px;
         border: 2px solid #000000;
         padding: 20px;
-        width: 400px;
+        width: 300px;
         height: 200px;
         }  
         .reviews-people p{
